# Chess

./: CMakeLists.txt  CMakePresets.json  main.cpp  module.cpp
inc/: BasePiece.h  Board.h  Pieces.h  game.h
src/: BasePiece.cpp  Board.cpp  Piece.cpp  Pieces.cpp  game.cpp
